# src/main/java/ch/tbz/m321servicenoah/model/CreateOrderRequest.java
@@ -1,4 +1,0 @@
-package ch.tbz.m321servicenoah.model;
-
-public record CreateOrderRequest(String product, int quantity) {
-}
