# src/main/java/ch/tbz/m321servicenoah/model/OrderMessage.java
@@ -1,6 +1,0 @@
-package ch.tbz.m321servicenoah.model;
-
-import java.time.Instant;
-
-public record OrderMessage(long orderId, String product, int quantity, Instant createdAt) {
-}
